# yo

./: local.properties  settings.gradle  webfsd.conf
app/: build.gradle
app/src/androidTest/java/de/mur1/yo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/drawable/: ic_twitch_logo.xml
app/src/main/res/layout/: activity_main.xml  chat_message.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: settings.xml
gradle/wrapper/: gradle-wrapper.properties
irc-proxy/: Makefile  config
irc-proxy/src/: crypto.h  ecdh.cpp  ecdh.h  irc_client.cpp  irc_client.h  logger.cpp  main.cpp  main.h  mutex.cpp  mutex.h  network.cpp  tls_client.cpp  util.cpp  util.h  writer.cpp  writer.h
yoloG/: settings.gradle
yoloG/app/: build.gradle
yoloG/app/src/main/: AndroidManifest.xml
yoloG/app/src/main/cpp/: CMakeLists.txt  crypto.cpp  irc_client.cpp  irc_client.h  logger.cpp  logger.h  main.cpp  mutex.cpp  mutex.h  network.cpp  network.h  thread.cpp  thread.h  tls_client.h  util.cpp  util.h
yoloG/app/src/main/res/layout/: activity_main.xml  channel_filter_spinner_item.xml  chat.xml  chat_message.xml  content.xml  feed.xml  lock.xml  menu.xml  settings.xml  settings_direct.xml  settings_proxy.xml
yoloG/app/src/main/res/values/: dimens.xml  strings.xml  themes.xml
yoloG/app/src/main/res/values-night/: themes.xml
yoloG/gradle/wrapper/: gradle-wrapper.properties
(+33 files in other folders)
